--- a/web.config
+++ b/web.config
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <system.webServer>
     <handlers>
@@ -5,7 +6,7 @@
     
     </handlers>
         <staticContent>
-            <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="8.00:00:00" />
+            <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="10.00:00:00" />
         </staticContent>
         <rewrite>
             <rules>
@@ -17,7 +18,7 @@
   <appSettings>
     <!-- Required settings -->
     <add key="WSGI_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
-    <add key="PYTHONPATH" value="C:\Sites\Ravencraft" />
+    <add key="PYTHONPATH" value="C:\Sites\RavencraftRepo" />
 
     <!-- Optional settings -->
     <add key="WSGI_RESTART_FILE_REGEX" value=".*((\.py)|(\.config))$" />
